<resources>
    <string name="app_name">Photo Desk</string>
    <string name="version_name">Gallery 1.0</string>
    <string name="update_date">2012-08-30</string>
    <string name="default_file_name">PhotoDesk</string>
    <string name="voice_min_length">0:00</string>
    <string name="voice_max_length">30:00</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="do_share">Share</string>
    <string name="rotate">Rotate</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="edit">Edit</string>
    <string name="set_as">Set as</string>
    <string name="move">Move</string>
    <string name="copy">Copy</string>
    <string name="protect">Protect</string>
    <string name="details">Details</string>
    <string name="slideshow">Slide show</string>
    <string name="view">View</string>
    <string name="grid">Grid</string>
    <string name="slide">Slide</string>
    <string name="map">Map</string>
    <string name="camera">Camera</string>
    <string name="security">Security</string>
    <string name="signature">Signature</string>
    <string name="sort">Sort</string>
    <string name="by_name_ascend">By name ascending</string>
    <string name="by_name_descend">By name descending</string>
    <string name="by_date_ascend">By date ascending</string>
    <string name="by_date_descend">By date descending</string>
    <string name="full_unprotect">Full unprotect</string>
    <string name="settings">Settings</string>
    <string name="merge_folders">Merge folders</string>
    <string name="rename">Rename</string>
    <string name="unprotect">Unprotect</string>
    <string name="signature_registration">Signature registration</string>
    <string name="signature_re_registration">Signature Re-registration</string>
    <string name="signature_verification">Signature verification</string>
    <string name="signature_start_check_title">[Check signature]</string>
    <string name="signature_start_check_sub_title">Check whether the registered signature exists</string>
    <string name="signature_start_check_success">Registered signature exists</string>
    <string name="signature_start_check_failure">No registered signature</string>
    <string name="signature_start_registration_title">[Registration]</string>
    <string name="signature_start_registration_sub_title">Start verification - Signature must be registered</string>
    <string name="signature_start_verification_title">Verification</string>
    <string name="signature_start_verification_sub_title">Start verification - Signature must be registered</string>
    <string name="signature_start_verification_failure">There is no registered signature</string>
    <string name="signature_start_delete_title">[Delete signature]</string>
    <string name="signature_start_delete_sub_title">Delete the registered signature</string>
    <string name="signature_start_delete_failure">Registered signature is deleted</string>
    <string name="signature_start_delete_success">There is no registered signature</string>
    <string name="signature_registration_registration_title">Registration</string>
    <string name="signature_registration_registration_sub_title">Save your signature for registration</string>
    <string name="signature_registration_registration_success_1">The first signature has been stored</string>
    <string name="signature_registration_registration_success_2">The Second signature has been stored</string>
    <string name="signature_registration_registration_success_3">Signature registration is complete</string>
    <string name="signature_registration_registration_failure">This signature is invalid for registration.\nPlease try again!</string>
    <string name="signature_registration_draw">Draw your signature to register</string>
    <string name="signature_verification_verification_title">Verification</string>
    <string name="signature_verification_verification_sub_title">Verify the signature</string>
    <string name="signature_verification_verification_success">Registration succeeded</string>
    <string name="signature_verification_verification_failure">Registration failed</string>
    <string name="signature_verification_level_title">[Verification Level]</string>
    <string name="signature_verification_level_sub_title">Select the verification level</string>
    <string name="signature_verification_level_low">Low</string>
    <string name="signature_verification_level_medium">Medium</string>
    <string name="signature_verification_level_high">High</string>
    <string name="signature_verification_level_confirm">Confirm</string>
    <string name="signature_verification_level_cancel">Cancel</string>
    <string name="signature_verification_draw">Draw your signature to verify</string>
    <string name="signature_retry_title">Retry</string>
    <string name="signature_retry_sub_title">Clear the screen to redraw signature</string>
    <string name="signature_input_password_title">Password</string>
    <string name="signature_input_password_sub_title">Input your password on behalf of signature</string>
    <string name="signature_input_password">Create a password</string>
    <string name="signature_input_password_again">Confirm your password</string>
    <string name="signature_password_registration_desc">Password registration is required in case you forget your signature</string>
    <string name="signature_password_registration">Password registration</string>
    <string name="password_too_short">Password is too short</string>
    <string name="passwords_dont_match">"The password do not match. -Please try again"</string>
    <string name="please_input_password">"Please input your password"</string>
    <string name="password_is_not_exist">Not registered password</string>
    <string name="password_verification_sucess">Password verification has been successful</string>
    <string name="password_verification_failture">Password verification has been failed</string>
    <string name="password_registration_sucess">Password registration has been successful</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="folder_name">"Folder Name"</string>
    <string name="number_of_images">Images</string>
    <string name="number_of_video">Videos</string>
    <string name="folder_creation_failture">"Folder creation failed"</string>
    <string name="folder_list">Folder List</string>
    <string name="new_folder">New folder</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="copy_qustion">Do you want to copy to the selected folder?</string>
    <string name="move_qustion">Do you want to move to the selected folder?</string>
    <string name="folder_delete">Delete the folder</string>
    <string name="btn_image_edit">edit</string>
    <plurals name="delete_selected_folders">
        <item quantity="one">Delete selected folder? \nAll images will be deleted with the seleted folder</item>
        <item quantity="other">Delete selected folders? \nAll images will be deleted with the selected folders</item>
    </plurals>
    <plurals name="delete_selection">
        <item quantity="one">Delete selected item?</item>
        <item quantity="other">Delete selected items?</item>
    </plurals>
    <plurals name="delete_selection_items">
        <item quantity="one">" item"</item>
        <item quantity="other">" items"</item>
    </plurals>
    <string name="protected_files_cannot_be_deleted">"- Protected files can not be deleted"</string>
    <string name="merge_into_the_selected_folder">Merge into the selected folder</string>
    <string name="please_enter_a_name">"Please enter a name"</string>
    <string name="the_same_file_already_exist">"The same file already exist"</string>
    <string name="the_same_folder_already_exist">"The same folder already exist"</string>
    <string name="warning">"Warning"</string>
    <string name="delete_q">"Delete?"</string>
    <string name="save">Save</string>
    <string name="save_type">"Save type"</string>
    <string name="save_sucess_filename_is">"Has been saved. \nPath : '"</string>
    <string name="select">select</string>
    <string name="music">music</string>
    <string name="basic_information">Basic Information</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="path">Path</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="orientation">Orientation</string>
    <string name="duration">Duration</string>
    <string name="mimetype">MIME type</string>
    <string name="file_size">File size</string>
    <string name="maker">Manufacturer</string>
    <string name="model">Model</string>
    <string name="flash">Flash</string>
    <string name="aperture">Aperture</string>
    <string name="focal_length">Focal Length</string>
    <string name="white_balance">White balance</string>
    <string name="exposure_time">Exposure time</string>
    <string name="iso">ISO</string>
    <string name="unit_mm">mm</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="flash_on">Flash on</string>
    <string name="flash_off">Flash off</string>
    <string name="details_title">%1$d of %2$d items:</string>
    <string name="close">Close</string>
    <string name="slide_show_err">You need more than one picture to have a slideshow</string>
    <string name="slide_show_start">Start Slide Show</string>
    <string name="slide_show_end">Terminate Slide Show</string>
    <string name="thumbnail_remove">"Thumbnail remove"</string>
    <string name="thumbnail_cache_remove_question">"Are you sure you want to remove the thumbnail cache?"</string>
    <string name="thumbnail_cache_remove_cancel">"Cancel"</string>
    <string name="thumbnail_cache_remove_confirm">"Confirm"</string>
    <string name="program_info_photodesk_gallery">"Photo Desk"</string>
    <string name="program_info_version_info">"Version info"</string>
    <string name="program_info_update_date">"Update date"</string>
    <string name="deselect_all">"Unselect all"</string>
    <string name="select_all">"Select all"</string>
    <string name="not_exist">"empty"</string>
	<string name="setting_main_option">"Setting Option"</string>
	<string name="type_change_prefkey">"theme_change"</string>
    <string name="type_change_title">"Theme Change"</string>
    <string name="type_change_summary">"Theme Changing"</string>
    <string name="type_change_dialogtitle">"Select Theme"</string>
 	<string name="cache_delete_prefkey">"cache_delete"</string>
    <string name="cache_delete_title">"Cache Delete"</string>
    <string name="cache_delete_summary">"Thumbnail Image Deleted"</string>
    <string name="help_info_prefkey">"help_info"</string>
    <string name="help_info_title">"Help"</string>
    <string name="help_info_summary">"Functional Description"</string>
    <string name="help_info_dialogtitle">"Help"</string>
    <string name="program_info_prefkey">"program_info"</string>
    <string name="program_info_title">"Program Info"</string>
    <string name="program_info_summary">"Check Program Info"</string>
    <string name="program_info_dialogtitle">"Program Info"</string>
    <string name="record">"Record"</string>
    <string name="stop">"Stop"</string>
    <string name="play">"Play"</string>
    <string name="image_editor">Image Editor</string>
    <string name="link_to_homescreen">"link to HomeScreen"</string>
    <string name="hidden_Folder">Folder Hide</string>
    <string name="show_hidden_folder">Showing the hidden folder</string>
    <string name="location_edit">Changing location</string>
    <string name="includevideo_info_title">"Include Videos"</string>
</resources>