<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/slide"
        android:icon="?attr/actionBarIconSlideShow"
        android:showAsAction="ifRoom"
        android:title="@string/slide">
    </item>
    <item
        android:id="@+id/share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:showAsAction="ifRoom"
        android:title="@string/share">
    </item>
    <item
        android:id="@+id/delete"
        android:icon="?attr/actionBarIconDel"
        android:showAsAction="ifRoom"
        android:title="@string/delete">
    </item>
    <item
        android:id="@+id/rotation"
        android:icon="?attr/actionBarIconRotate"
        android:showAsAction="ifRoom"
        android:title="@string/rotate">
        <menu>
            <item
                android:id="@+id/rotation_left"
                android:title="@string/rotate_left">
            </item>
            <item
                android:id="@+id/rotation_right"
                android:title="@string/rotate_right">
            </item>

        </menu>
    </item>
	<item
        android:id="@+id/edit"
        android:icon="?attr/actionBarIconName"
        android:showAsAction="ifRoom"
        android:title="@string/edit">
        <menu>
            <item
                android:id="@+id/rename"
                android:title="@string/rename">
            </item>
            <item
                android:id="@+id/location_edit"
                android:title="@string/location_edit">
            </item>

        </menu>
    </item>
    <item
        android:id="@+id/set_as"
        android:icon="?attr/actionBarIconSetAs"
        android:showAsAction="ifRoom"
        android:title="@string/set_as">
    </item>
    <item
        android:id="@+id/move"
        android:icon="?attr/actionBarIconMove"
        android:showAsAction="ifRoom"
        android:title="@string/move">
    </item>
    <item
        android:id="@+id/copy"
        android:icon="?attr/actionBarIconCopy"
        android:showAsAction="ifRoom"
        android:title="@string/copy">
    </item>
    <item
        android:id="@+id/protect"
        android:icon="?attr/actionBarIconProtect"
        android:showAsAction="ifRoom"
        android:title="@string/protect">
    </item>
    <item
        android:id="@+id/unprotect"
        android:icon="?attr/actionBarIconProtect"
        android:showAsAction="ifRoom"
        android:title="@string/unprotect">
    </item>    
    <item
        android:id="@+id/detail"
        android:icon="?attr/actionBarIconMore"
        android:showAsAction="ifRoom"
        android:title="@string/details">
    </item>

</menu>
