<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/record_view_padding_left"
    android:paddingRight="@dimen/record_view_padding_right"
    android:paddingBottom="@dimen/record_view_padding_bottm"
    android:paddingTop="@dimen/record_view_padding_Top"
    android:orientation="vertical" 
    android:background="@drawable/pop_list_bg">

	<LinearLayout 
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="vertical"
		android:id="@+id/play_space">
	    <LinearLayout 
		    android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_marginBottom="@dimen/record_view_progress_layout_margin_bottom"
	    	android:gravity="center"
	    	android:orientation="horizontal">

	    	<TextView 
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content" 
		    	android:layout_marginLeft="@dimen/record_view_progress_text_margin"
		    	android:layout_marginRight="@dimen/record_view_progress_text_margin"
		    	android:text="@string/voice_min_length"
		    	android:textColor="#ffffff"
		    	android:textSize="@dimen/record_view_time_text_size"
		    	android:id="@+id/recorded_time"/>
		    <ProgressBar
		    	android:layout_width="0dip"
		    	android:layout_height="wrap_content" 
		    	android:layout_weight="9"
		    	style="?android:attr/progressBarStyleHorizontal"
            	android:progressDrawable="@drawable/animation_progress"
		    	android:id="@+id/record_seekbar"/>
		    <TextView 
		        android:layout_width="0dip"
		    	android:layout_height="wrap_content"
		    	android:layout_weight="2" 
		    	android:layout_marginLeft="@dimen/record_view_progress_text_margin"
		    	android:text="@string/voice_max_length"
		    	android:textColor="#ffffff"
		    	android:textSize="@dimen/record_view_time_text_size"
		    	android:id="@+id/max_time"/>
		    
		</LinearLayout>
		
		<RelativeLayout 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<Button 
			    android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/record"
				android:textSize="@dimen/record_view_button_text_size"
				android:background="@drawable/btn_pop_selector"
				android:id="@+id/start_record"/>
			<Button 
			    android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:visibility="gone"
				android:text="@string/save"
				android:textSize="@dimen/record_view_button_text_size"
				android:background="@drawable/btn_pop_selector"
				android:id="@+id/save_record"/>
			<Button 
			    android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:visibility="gone"
				android:text="@string/stop"
				android:textSize="@dimen/record_view_button_text_size"
				android:background="@drawable/btn_pop_selector"
				android:id="@+id/stop_record"/>
			<LinearLayout 
			    android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
			    <Button 
				    android:layout_width="0dip"
				    android:layout_weight="1"
					android:layout_height="wrap_content"
					android:visibility="gone"
					android:text="@string/play"
					android:textSize="@dimen/record_view_button_text_size"
					android:background="@drawable/btn_pop_selector"
					android:id="@+id/play_record"/>
				<Button 
				    android:layout_width="0dip"
				    android:layout_weight="1"
					android:layout_height="wrap_content"
					android:visibility="gone"
					android:background="@drawable/btn_pop_selector"
					android:text="@string/delete"
					android:textSize="@dimen/record_view_button_text_size"
					android:id="@+id/remove_record"/>
			</LinearLayout>       
		</RelativeLayout>	    
	</LinearLayout>
	
	<RelativeLayout 
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@id/play_space"
		android:layout_alignParentTop="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentLeft="true">
	    <ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:src="@drawable/voice_microphone"></ImageView>
	</RelativeLayout>
	
	

</RelativeLayout>
